--- a/tex/main.tex
+++ b/tex/main.tex
@@ -226,45 +226,57 @@ The equations and the boundary conditions are given in Table \ref{tbl:eqns-bc-pa
 
 \subsection{Statistical Analysis of Field Data}
 
-\begin{figure}[!h]
+\begin{figure}[htb!]
 		\centering
     \caption{Distributions of indoor/outdoor pressure differences (top row), and its correlation with indoor air contaminant concentrations (middle rows), and air exchange rate (bottom row), at three different VI sites - ASU house, Indianapolis site, and North Island NAS.}
     \label{fig:kde}
     \includegraphics[width=\textwidth]{nas_asu_pp.pdf}
 \end{figure}
 
-% PRESSURE DISTRIBUTION DISCUSSION
-Our discussion of examining the temporal variability of indoor air contaminant concentration begins by considering one of the most dynamic factors that influence VI - the indoor/outdoor pressure difference ($p_\mathrm{in/out}$).
-In the top row of Figure \ref{fig:pair_grid}, the distribution of $p_\mathrm{in/out}$ at three difference VI sites, the ASU house, Indianapolis site, and North Island NAS, are plotted.
-The distributions of $p_\mathrm{in/out}$ at these three site resemble normal-like distribution, with a mean of a few negativa Pa, indicating that the most probable state is that these sites are slightly depressized.
-At the ASU house and the Indianapolis site, the range of $p_\mathrm{in/out}$ values are relatively similar, whereas the North Island NAS site has significalty larger span of values.
-This is most likely due to the poor structural condition of the North Island site, making it much more suspectible to barometric pressure fluctations; the ASU house and Indianapolis site are regular residential structure in good condition.
-The periods when the preferential pathway at the ASU house was open and closed are considered separately.
-% TODO: Add some sort of interesting conclusion
+\begin{table}[htb!]
+  \caption{5th and 95th percentile values of $p_\mathrm{in/out}$ and $c_\mathrm{in}/c_\mathrm{in,mean}$ in Figure \ref{fig:kde}.}\label{tbl:percentiles}
+  \begin{tabular}{c c c c c c c}
+    \toprule
+    & \multicolumn{2}{c|}{\textbf{North Island NAS}} & \multicolumn{2}{c|}{\textbf{ASU house PP Open}} & \multicolumn{2}{c}{\textbf{ASU House PP Closed}} \\
+    Percentile & 5th & 95th & 5th & 95th & 5th & 95th \\
+    $p_\mathrm{in/out}$ (Pa) & -19.9 & 7.4 & -1.4 & 2.1 & -2.1 & 2.27 \\
+    $c_\mathrm{in}/c_\mathrm{in,mean}$ & 4.1 & 0.2 & 13.5 & 0.2 & 3.3 & 0.4 \\
+    \bottomrule
+  \end{tabular}
+\end{table}
 
-% P_IN/OUT VS. C_IN - ASU HOUSE
-Now we move on to look at $p_\mathrm{in/out}$ is correlated with the indoor air contaminant concentration ($c_\mathrm{in}$).
-The middle row of Figure \ref{fig:pair_grid} shows the log-10 values of $c_\mathrm{in}$ vs. $p_\mathrm{in/out}$, placed into evenly spaced bins, are plotted.
-Each bin represents the mean $c_\mathrm{in}$ and the errorbars show the 95\% confidence interval. % TODO: Change this description once you've fixed the figure.
-A linear regression curve is also fitted to the data, with the shaded part of the regression again indicating the 95\% confidence interval. % TODO: Make sure this is right.
-At the ASU house, it is readibly apparent that the preferential pathway has a profound effect on how sensitive $c_\mathrm{in}$ is to $p_\mathrm{in/out}$, showing that the closing of the preferential pathway fundamentally changes the site.
-Perhaps surprsingly, when the preferential pathway is closed $p_\mathrm{in/out}$ is not strongly correlated with $c_\mathrm{in}$.
+The pressure difference between the indoor and outdoor/ambient ($p_\mathrm{in/out}$) is an important driving force in VI, drawing in (or preventing) contaminants from entering a structure. % TODO: Add references
+Changes in $p_\mathrm{in/out}$ is also a dynamic and fast process, impacting VI more rapidly than e.g. fluctuations in groundwater depth or contaminant concentration does; these processes may take weeks or even months to impact the overlying structure.
+Therefore it is reasonable to assume that the temporal variability in indoor air contaminant concentration $c_\mathrm{in}$ may be driven by changes in $p_\mathrm{in/out}$.
 
-% - " - - INDIANAPOLIS AND NORTH ISLAND NAS
-At the Indianapolis and North Island NAS sites, we again see the association of higher $c_\mathrm{in}$ when the structures are depressurized, but with still significant variability for a given $p_\mathrm{in/out}$.
+We examine the relationship between $p_\mathrm{in/out}$ and $c_\mathrm{in}$  by constructing the two-dimensional kernel density estimation (KDE) plots seen in Figure \ref{fig:kde}.
+The KDE plot allows us to view the distribution of $p_\mathrm{in/out}$ and $c_\mathrm{in}$, and how well these correlate.
+For this analysis we consider two VI sites, North Island NAS, and the ASU house, with the ASU house dataset divided up into two periods, before and after the land drain (called preferential pathway (PP) from here on) had been closed.
+The preferential pathway significantly impacted the ASU house to such an extent that these two periods can essentially be considered as two different VI sites, and allowing us to examine the effect it had.
 
-% MODEL CHOICE DISCUSSION
-The difference in correlation of $c_\mathrm{in}$ vs. $p_\mathrm{in/out}$ for the "open" and "closed" periods, as well as the $p_\mathrm{in/out}$ is more evenly distributed around 0 Pa support our choice of model, where we assume that the preferential pathway acts by enhancing the "advective potential" of a VI site through improving communication between the indoor and outdoor.
+In Figure \ref{fig:kde} $c_\mathrm{in}$ is normalized to the mean $c_\mathrm{in,mean}$ of each dataset, allowing us to compare the impact $p_\mathrm{in/out}$ had on $c_\mathrm{in}$.
+A value of 10 on the y-axis indicate that $c_\mathrm{in}$ is 10 times greater than the mean here, and 0.1 indicate that it is one tenth of the mean.
+The Pearson's r between $p_\mathrm{in/out}$ and $c_\mathrm{in}$ for each dataset is shown in the legend.
 
-% AE DISCUSSION
-It is clear that $p_\mathrm{in/out}$ sets a trend, i.e. increased depressurziation is associated with higher $c_\mathrm{in}$, but there is still considerable variability for a given $p_\mathrm{in/out}$.
-$p_\mathrm{in/out}$ is important in determining the contaminant entry rate into a structure, but it also will partly determine the air exchange rate.
-How significantly $p_\mathrm{in/out}$ determines $A_e$ varies with site specific conditions, e.g. HVAC operation, if windows are open/closed, how well insulted the structure is etc.
-$A_e$ is thus highly variate for a given $p_\mathrm{in/out}$, and we hypothesize that most of the variability in $c_\mathrm{in}$ at a specific $p_\mathrm{in/out}$ may be explained by variation in air exchange rate ($A_e$).
-In the bottom left of Figure \ref{fig:pair_grid} we can see that larger depressurziation is associated with higher $A_e$, while overpressurazation is associated with lower $A_e$, but with still significant uncertainty.
+An interesting aspect of the North Island NAS site is that $p_\mathrm{in/out}$ varies so significantly here, with the 5th and 9th percentile $p_\mathrm{in/out}$ -19.9 and 7.4 Pa respectively.
+This may be contrasted with 5th and 95th percentile $p_\mathrm{in/out}$ at the ASU house: -1.4 and 2.1 Pa (PP open), and -2.1 and 2.27 Pa (PP closed).
 
+The large (roughly one order of magnitude) under- and overpressurization of the North Island NAS site leads to roughly a one order magnitude increase and decrease from the mean $c_\mathrm{in}$.
+Combined with $r=-0.73$, it is quite clear that at this site $p_\mathrm{in/out}$ largely determines $c_\mathrm{in}$ (there is still variability in $c_\mathrm{in}$ for a given $p_\mathrm{in/out}$, which we address later).
+This is the same principle that governs the controlled pressure method (CPM) concept.
 
-\subsection{Variation Timeperiod} % TODO: Improve title
+Turning to the ASU house datasets, we see a quite different situation.
+Here the variability of $c_\mathrm{in}$ is just as large, or even larger than at North Island NAS, yet the $p_\mathrm{in/out}$ varies far less.
+At first glance it may seem like the $c_\mathrm{in}$ values for the periods when the PP is open and closed respectively are relatively comparable, but the 5th and 95th percentiles values of differ significantly $c_\mathrm{in}/c_\mathrm{in,mean}$ as may be seen in Table \ref{tbl:percentiles}.
+
+It is clear that the PP dramatically increases the house's sensitivity to $p_\mathrm{in/out}$, and the site is fundamentally different during the period when the PP was open.
+Yet, the magnitude of change in $c_\mathrm{in}$ is far greater than the change in $p_\mathrm{in/out}$, leading to the conclusion that it is not just increased flow rates into the structure that causes this, but there must also be an increased amount of contaminant as well as a much larger spatial variability in the sub-base.
+This is a topic that we will return to later.
+
+The magnitude of change in $c_\mathrm{in}$ when the PP is closed is more in line with the magnitude of change in $p_\mathrm{in/out}$, but there is still more variability than one would expect.
+We hypothesize that this is largely due to fluctuations in air exchange rate, which we will examine later.
+
+\subsection{Change In Indoor Air Contaminant Concentration Over Time} % TODO: Improve title
 
 \begin{figure}[htb!] % TODO: Adjust aspect ratio
   \centering
@@ -274,18 +286,22 @@ In the bottom left of Figure \ref{fig:pair_grid} we can see that larger depressu
 \end{figure}
 
 % RESAMPLING TIME ANALYSIS
-So far our discussion has focused on how much variability in $c_\mathrm{in}$ can be expected, and some drivers for this, at the three different sites.
-However, this tells just little about how much $c_\mathrm{in}$ may vary over a given timeperiod.
-To examine this, the data is resampled over a chosen timeperiod, and the quotient of the maximum and minimum $c_\mathrm{in}$ (denoted as $c_\mathrm{max}/c_\mathrm{min}$) are plotted for this period.
-I.e. if $c_\mathrm{in}$ samples were collected every four hours over a period of a year, and the data is resampled on a daily basis, then $c_\mathrm{max}/c_\mathrm{min}$ is returned for within each day, giving 365 data points.
-For this analysis, we consider the period when the preferential pathway was open/closed at the ASU house, and the three indoor air contaminant found at the Indianapolis site (TCE, PCE, and Chloroform).
-The North Island NAS dataset is excluded here, as the data that we have available only spans a few days versus year(s) for the ASU house and Indianapolis sites.
+So far we have discussed how the relationship between $c_\mathrm{in}$ and $p_\mathrm{in/out}$, and how significantly $c_\mathrm{in}$ may vary at a site.
+But this tells us little about how much variability in $c_\mathrm{in}$ may be expected over time.
+For this analysis we turn to the ASU house data (PP open/closed considered separately again), and another well-studied VI site, the Indianapolis site in Indiana.
+Both of these sites collected high frequency $c_\mathrm{in}$ samples over a significant periods and are therefore suitable. % TODO: Reference to the time periods here
+Furthermore, at Indianapolis site the $c_\mathrm{in}$ of three different contaminants, Chloroform, Trichloroethylene (TCE), and Tetrachloroethylene (PCE) were collected, allowing us to see if there is any difference in the variability of each.
+The North Island NAS dataset only spans a few days, and is therefore excluded from this analysis.
 
-Figure \ref{fig:resampling} shows the the expected maximum variability over different resampling periods (from 1 day to 6 months).
+To demonstrate how significantly $c_\mathrm{in}$ can vary across time, we calculate at the quotient of the maximum and minimum $c_\mathrm{in}$ (denoted as $c_\mathrm{max}/c_\mathrm{min}$) over a given time period.
+I.e. if $c_\mathrm{in}$ samples were collected every four hours over a period of a year, and the data is resampled on a daily basis, then $c_\mathrm{max}/c_\mathrm{min}$ is returned for within each day, giving 365 data points.
+Resampling periods of one, two, three, days, weeks, and months are chosen and Figure \ref{fig:resampling} shows the result of this analysis.
+
 As one might expect, the longer the resampling period, the larger the maximum variability is, spanning from less than a threefold difference, to two to three orders of magnitude.
 That such a large variability is observed when the resampling time approaches the length of the entire datasets is hardly surprising, nor is it surprising that the variability is much more significant when the preferential pathway was open than closed.
-What may be surprising is that absent a preferential pathway such as the one at the ASU house, it may may take a few weeks before an order of magnitude maximum variability is reached.
-The most significant result of this analysis is that the maximum variability is quite small across a few days, suggesting that e.g. 24-hour passive samplers will resolve the daily temporal variabilty in $c_\mathrm{in}$ well ($c_\mathrm{max}/c_\mathrm{min} \approx 1.5$) and that a sampling frequency greater than a few days may yield little extra information.
+What may be surprising is that absent a preferential pathway such as the one at the ASU house, it may take a few weeks before an order of magnitude maximum variability is reached.
+The most significant result of this analysis is that the maximum variability is quite small across a few days, suggesting that e.g. 24-hour passive samplers will resolve the daily temporal variability in $c_\mathrm{in}$ well ($c_\mathrm{max}/c_\mathrm{min} \approx 1.5$) and that a sampling frequency greater than a few days may yield little extra information.
+There is also little difference between maximum variability of $c_\mathrm{in}$ the ASU house (when the PP is closed), and the three contaminants at the Indianapolis site.
 
 % ASU:
 % Pressure distributions similar
